fixing bg not showing on pages

--- a/style/output.css
+++ b/style/output.css
@@ -623,6 +623,14 @@ Ensure the default browser behavior of the `hidden` attribute.
   background-image: linear-gradient(to right, var(--tw-gradient-stops));
 }
 
+.bg-\[url\(\'\.\/images\/bg-mobile\.png\'\)\] {
+  background-image: url('./images/bg-mobile.png');
+}
+
+.bg-\[url\(\'\/images\/bg-mobile\.png\'\)\] {
+  background-image: url('/images/bg-mobile.png');
+}
+
 .from-grad-start {
   --tw-gradient-from: var(--grad-start);
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgb(255 255 255 / 0));
@@ -748,14 +756,6 @@ Ensure the default browser behavior of the `hidden` attribute.
     right: 7%;
   }
 
-  .md\:right-\[3rem\] {
-    right: 3rem;
-  }
-
-  .md\:-top-\[30\%\] {
-    top: -30%;
-  }
-
   .md\:w-\[65\%\] {
     width: 65%;
   }
@@ -783,6 +783,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   }
 
   .md\:bg-desktop {
+    background-image: url('/images/bg-desktop.png');
+  }
+
+  .md\:bg-\[url\(\'\/images\/bg-desktop\.png\'\)\] {
     background-image: url('/images/bg-desktop.png');
   }
 
